fix: add overflow-x hidden so www isn't ugly

--- a/src/www/public/css/index.css
+++ b/src/www/public/css/index.css
@@ -1,4 +1,7 @@
 /* GLOBAL */
+html {
+  overflow-x: hidden;
+}
 
 body {
   overflow-x: hidden;
